--- a/ui/package.json
+++ b/ui/package.json
@@ -8,15 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "firebase": "^12.2.1",
+    "globalize": "^1.7.1",
     "lucide-react": "^0.542.0",
+    "moment": "^2.30.1",
     "mysql2": "^3.15.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
+    "react-big-calendar": "^1.19.4",
+    "react-datepicker": "^8.10.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "socket.io-client": "^4.8.1"
