--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.18.2",
     "firebase": "^12.2.1",
     "firebase-admin": "^13.5.0",
+    "googleapis": "^168.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.15.0",
